--- a/TrackITApp/track-it-app/package.json
+++ b/TrackITApp/track-it-app/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@auth0/angular-jwt": "^4.0.0",
+    "@btapai/ng-loading-indicator": "^1.1.3",
     "@ng-bootstrap/ng-bootstrap": "^6.0.1",
     "@ngx-formly/bootstrap": "^5.5.15",
     "@ngx-formly/core": "^5.5.15",
@@ -34,7 +35,7 @@
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
